# research-operating-system

./: .gitignore  CLAUDE.md  README.md  brainstorm.md  plan.md  pyproject.toml  software-architecture.md  with-llm.md
docs/superpowers/plans/: 2026-05-13-invariantos-v0.2-evidence-graph.md  2026-05-24-release-readiness-cleanup.md  2026-05-24-semantic-focus-modes.md
invariant_os/: cli.py
invariant_os/analysis/: __init__.py  boundary.py  detectors.py  enterprise_resolver.py  flow.py  graph.py  indexer.py  primitives.py
invariant_os/core/: __init__.py  audit.py  config.py  constants.py  evidence.py  focus.py  models.py  output.py  safety.py
invariant_os/llm/: __init__.py  base.py  mock.py
invariant_os/patchdiff/: __init__.py  engine.py  gitdiff.py  output.py  parser.py
invariant_os/reasoning/: __init__.py  engine.py  output.py
invariant_os/report/: __init__.py  html.py  markdown.py  patch_diff_markdown.py  reasoning_markdown.py  review_queue.py  sarif.py
tests/: test_audit_cli.py  test_audit_config.py  test_boundary.py  test_config.py  test_detectors.py  test_enterprise_resolver.py  test_flow.py  test_focus.py  test_graph.py  test_html_report.py  test_indexer.py  test_models.py  test_patchdiff_cli.py  test_patchdiff_engine.py  test_patchdiff_gitdiff.py  test_patchdiff_output.py  test_patchdiff_parser.py  test_patchdiff_report.py  test_primitives.py  test_reason_cli.py  test_reasoning_engine.py  test_reasoning_models.py  test_reasoning_output.py  test_reasoning_report.py  test_report.py  test_review_queue_report.py  test_safety.py  test_sarif_report.py
(+20 files in other folders)
