[project]
name = "invariant-os"
version = "0.10.0"
description = "Local-first authorized security research workbench"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.0",
]

[project.scripts]
invariant-os = "invariant_os.cli:app"

[tool.setuptools.packages.find]
include = ["invariant_os*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["invariant_os"]
